# gs1-product-link

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  GS1 Data Source → Digital Link QR — file locations & context.md  IMPLEMENTATION_SPEC.md  LICENSE  OBSIDIAN_NOTE_content.md  PREPARATION.md  PROJECT_HANDOVER.md  README.md  RESUME_PROMPT.md  clients.example.yml  conftest.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_SPEC.md  PREPARATION.md  PROJECT_HANDOVER.md  ROADMAP.md
docs/clients/: noviplast-generator-handoff.md  noviplast-generator-spec.md  noviplast-page-adapter.md  noviplast-pilot-handoff.md  noviplast.md
lib/: __init__.py  acf.py  categories.py  config.py  errors.py  gdsn.py  generator.py  gs1_dl_client.py  llm.py  logging_setup.py  media.py  media_video.py  multilingual.py  qr.py  records.py  state.py  templates.py  units.py  website_status.py  wp_client.py
mcps/gs1-nl/: README.md  package.json
mcps/qr-render/: README.md  package.json
mcps/wordpress/: README.md  package.json  tsconfig.json
prompts/noviplast/: generation.v1.md
reference/: measurement_units.json
schema/: clients.schema.json
scripts/: __init__.py  build_brick_map.py  build_video_map.py  inspect_export.py  parse_export.py  run_execute.py  run_generate.py  run_plan.py  run_unpublish.py
skills/content-generator/: SKILL.md
skills/flow-orchestrator/: SKILL.md
skills/gs1-digital-link/: SKILL.md
skills/gs1-export-parser/: SKILL.md
skills/qr-render/: SKILL.md
tests/: test_generation_prompt.py  test_smoke.py
(+57 files in other folders)
