[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gs1-digital-link-orchestrator"
version = "0.0.1"
description = "Turn GS1 Data Source exports into GS1 Digital Link QR codes and WordPress product pages."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "qrcode[pil]>=7.4",
    "pystache>=0.6",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-httpx>=0.30", "mypy>=1.9", "ruff>=0.4"]

[project.urls]
Homepage = "https://github.com/NextGenDataLead/gs1-product-link"
Repository = "https://github.com/NextGenDataLead/gs1-product-link"

[tool.setuptools]
packages = ["lib", "scripts"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "PL"]

[tool.ruff.lint.per-file-ignores]
# Literal HTTP status codes and counts in assertions are clearer inline than as
# named constants; magic-value linting is noise in tests.
"tests/**" = ["PLR2004"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
